testsuite/poke.pkl/ge-f64-diag-2.pk
/* { dg-do compile } */

var res
  = 1L .>= 3H; /* { dg-error "invalid operand .*" } */
